Remove redundant CSS causing UI issues on iPhone SE

--- a/src/components/CameraPermissions/Primer/style.css
+++ b/src/components/CameraPermissions/Primer/style.css
@@ -1,10 +1,5 @@
 @import (less) "../../Theme/constants.css";
 
-.container {
-  width: 100%;
-  height: 100%;
-}
-
 .bodyWrapper {
   display: flex;
   flex-direction: column;
